<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainActivityViewModel"
            type="com.example.showstoreinventory.MainActivityViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_16">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_shoe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/shoe_name"
                android:textSize="@dimen/sp_15" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:text="@={mainActivityViewModel.shoe.name}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/company"
                android:textSize="@dimen/sp_15" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:text="@={mainActivityViewModel.shoe.company}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/size"
                android:textSize="@dimen/sp_15" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:ellipsize="end"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1"
                android:text="@={`` + mainActivityViewModel.shoe.size}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/description"
                android:textSize="@dimen/sp_15" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:ellipsize="end"
                android:lines="2"
                android:maxLines="2"
                android:text="@={mainActivityViewModel.shoe.description}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_8"
                android:text="@string/cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</layout>